--- a/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - SwingDataViewer</title>
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -29,30 +29,48 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SwingDataViewer</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Swing Data Viewer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Graph">データ表示</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">登録</a>
+                            <a class="nav-link " asp-area="" asp-controller="Edit" asp-action="Index">データ編集</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Edit" asp-action="Index">編集</a>
-                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">ログアウト</a>
-                            </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                @User.Identity.Name
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-controller="User" asp-action="Index">ユーザー情報の編集</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item " asp-area="" asp-controller="Auth" asp-action="Logout">ログアウト</a>
+                            </div>
+                        </li>
                         }
+                        else
+                        {
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Auth" asp-action="Login">ログイン</a>
+                        </li>
+                        }
+
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Register" asp-action="Index">新規ユーザー登録</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +85,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - SwingDataViewer
+            &copy; PUNIO 2019 - SwingDataViewer
+            <div class="float-right">
+                <a href="https://github.com/punio/SwingLogger" target="_blank"><img src="~/images/GitHub_Logo.png" /></a>
+            </div>
         </div>
     </footer>
 
