--- a/Web/SwingDataViewer/Views/Home/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Index.cshtml
@@ -158,7 +158,7 @@
 
         <div class="card mb-2">
             <div class="card-header">
-                <span>財布と相談</span>
+                <span>弾幕薄いよ！何やってんの！？</span>
                 <h4 class="card-title">合計打数</h4>
             </div>
             <div class="card-body">
