--- a/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
@@ -87,7 +87,8 @@
         <div class="container">
             &copy; PUNIO 2019 - SwingDataViewer
             <div class="float-right">
-                <a href="https://github.com/punio/SwingLogger" target="_blank"><img src="~/images/GitHub_Logo.png" /></a>
+                <a href="https://punio.github.io/SwingLogger/PrivacyPolicy.html" target="_blank">Privacy Policy</a>
+                <a href="https://github.com/punio/SwingLogger" target="_blank"><img src="~/images/GitHub_Logo.png"/></a>
             </div>
         </div>
     </footer>
