新規ユーザー獲得のために頑張る

--- a/Web/SwingDataViewer/Views/Register/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Register/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SwingDataViewer.Models.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Register";
 }
 
 
