--- a/Web/SwingDataViewer/Views/Home/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
 ﻿@using SwingCommon
 @model SwingDataViewer.Models.HomeViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Swing Data Viewer";
 }
+
+<p>
+    ユピテル ゴルフスイングトレーナー GST-7 BLEを使ってスマホでどうにかするやつの見るほうです
+    <br />
+    「<a asp-area="" asp-controller="Home" asp-action="Start">はじめかた</a>」を見て試してください
+    <br />
+    <br />
+    <small>デザインがアレなのは作るのに疲れたからなので優しい方はGitHubでタスケテください</small>
+</p>
 
 <h2>らんきんぐ</h2>
 
