--- a/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                 <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Graph">データ表示</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Statistics">データ解析</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link " asp-area="" asp-controller="Edit" asp-action="Index">データ編集</a>
                             </li>
                         }
