--- a/Web/SwingDataViewer/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_CookieConsentPartial.cshtml
@@ -9,9 +9,9 @@
 @if (showBanner)
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        Use this space to summarize your privacy and cookie use policy. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn More</a>.
+        このサービスはCookieつかってます. <a href="https://punio.github.io/SwingLogger/PrivacyPolicy.html" target="_blank">プライバシーポリシー</a>.
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true">Accept</span>
+            <span aria-hidden="true">了解</span>
         </button>
     </div>
     <script>
