メモも解析に出した方がいいと思う

--- a/Web/SwingDataViewer/Views/Edit/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Edit/Index.cshtml
@@ -17,6 +17,7 @@
             <td>ボールスピード</td>
             <td>飛距離</td>
             <td>ミート率</td>
+            <td>タグ</td>
         </tr>
     </thead>
     <tbody>
@@ -30,6 +31,7 @@
             <td>@swing.BallSpeed</td>
             <td>@swing.Distance</td>
             <td>@swing.Meet</td>
+            <td>@swing.Tag</td>
         </tr>
         }
     </tbody>
