--- a/Web/SwingDataViewer/Views/Home/Index.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <small>デザインがアレなのは作るのに疲れたからなので優しい方はGitHubでタスケテください</small>
 </p>
 
-<h2>らんきんぐ</h2>
+<h2>よくわからないランキング</h2>
 
 <h3>@Model.ThisMonth.TargetDate</h3>
 <div class="container">
