解析に合計球数も表示

--- a/Web/SwingDataViewer/Views/Home/Statistics.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Statistics.cshtml
@@ -18,6 +18,7 @@
                 <th>ボールスピード(m/s)</th>
                 <th>飛距離(yard)</th>
                 <th>ミート率</th>
+                <th>合計球数</th>
             </tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@
                     <td>@data.BallSpeed.ToString("f1")</td>
                     <td>@data.Distance.ToString("f0")</td>
                     <td>@data.Meet.ToString("f2")</td>
+                    <td>@data.Total</td>
                 </tr>
             }
 
