レイアウトちょっとdake

--- a/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
@@ -41,13 +41,13 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Graph">データ表示</a>
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Graph">表示</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Statistics">データ解析</a>
+                                <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Statistics">解析</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " asp-area="" asp-controller="Edit" asp-action="Index">データ編集</a>
+                                <a class="nav-link " asp-area="" asp-controller="Edit" asp-action="Index">編集</a>
                             </li>
                         }
                         <li class="nav-item">
