Add twitter link

--- a/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
+++ b/Web/SwingDataViewer/Views/Shared/_Layout.cshtml
@@ -94,7 +94,11 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; PUNIO 2019 - SwingDataViewer
+            <div class="float-left">
+                &copy; PUNIO 2019 - SwingDataViewer
+                <a href="https://twitter.com/intent/tweet?screen_name=vl_o_lv&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-show-count="false">Tweet to @@vl_o_lv</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
             <div class="float-right">
                 <a href="https://punio.github.io/SwingLogger/PrivacyPolicy.html" target="_blank">Privacy Policy</a>
                 <a href="https://github.com/punio/SwingLogger" target="_blank"><img src="~/images/GitHub_Logo.png" /></a>
